[gd_scene load_steps=14 format=3 uid="uid://bjcarjwcfuqhq"]

[ext_resource type="Script" uid="uid://5n76jfmvxcdk" path="res://scripts/homepage.gd" id="1_goorp"]
[ext_resource type="Texture2D" uid="uid://cgyhnrg2dx20e" path="res://assets/cover.png" id="1_vw1eu"]
[ext_resource type="AudioStream" uid="uid://ciu8baxnpvnt1" path="res://assets/music/home.mp3" id="3_mnr3g"]
[ext_resource type="Texture2D" uid="uid://dbljogle4h5ee" path="res://assets/Play Square Button.png" id="3_vpfph"]
[ext_resource type="Texture2D" uid="uid://tmbmlrdcahll" path="res://assets/Info Square Button.png" id="4_vpfph"]
[ext_resource type="Texture2D" uid="uid://ctouu3dcddral" path="res://assets/Settings Square Button.png" id="5_wx083"]
[ext_resource type="Texture2D" uid="uid://bl1i6qk65cab" path="res://assets/X col_Square Button.png" id="6_flo1l"]
[ext_resource type="Texture2D" uid="uid://3dmep2wbk0wa" path="res://assets/Audio Square Button.png" id="7_wjdee"]
[ext_resource type="Texture2D" uid="uid://btsa50jbuffdq" path="res://assets/Music Square Button.png" id="8_yhjr5"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_goorp"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 8
border_width_top = 6
border_width_right = 6
border_width_bottom = 8
border_color = Color(0.9764706, 0.62352943, 0.03137255, 1)

[sub_resource type="FontVariation" id="FontVariation_vpfph"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vw1eu"]
content_margin_left = 63.0
content_margin_top = 33.0
bg_color = Color(0.13333334, 0.11764706, 0.31764707, 1)
border_color = Color(0.09366938, 0.09366939, 0.09366929, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_goorp"]

[node name="homepage" type="Node2D"]
process_mode = 3
script = ExtResource("1_goorp")

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(580, 387)
texture = ExtResource("1_vw1eu")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 388.74225
offset_top = 310.8261
offset_right = 774.74225
offset_bottom = 564.8261
theme_override_constants/separation = 13

[node name="play" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 54
text = "Play"
icon = ExtResource("3_vpfph")
icon_alignment = 2
expand_icon = true

[node name="help" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 54
text = "Help"
icon = ExtResource("4_vpfph")
icon_alignment = 2
expand_icon = true

[node name="settings" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 54
text = "Settings"
icon = ExtResource("5_wx083")
icon_alignment = 2
expand_icon = true

[node name="help_tab" type="Node2D" parent="."]
visible = false

[node name="exit_help" type="Button" parent="help_tab"]
offset_left = 862.0459
offset_top = 146.98325
offset_right = 932.0459
offset_bottom = 217.98325
theme_override_font_sizes/font_size = 45
icon = ExtResource("6_flo1l")
expand_icon = true

[node name="ScrollContainer" type="ScrollContainer" parent="help_tab"]
offset_left = 263.0
offset_top = 214.0
offset_right = 926.0
offset_bottom = 590.0
theme_override_styles/panel = SubResource("StyleBoxFlat_goorp")
horizontal_scroll_mode = 0

[node name="Label" type="RichTextLabel" parent="help_tab/ScrollContainer"]
layout_mode = 2
theme_override_colors/default_color = Color(0.9764706, 0.57254905, 0.019607844, 1)
theme_override_fonts/normal_font = SubResource("FontVariation_vpfph")
theme_override_font_sizes/normal_font_size = 36
theme_override_font_sizes/bold_font_size = 36
theme_override_font_sizes/bold_italics_font_size = 36
theme_override_font_sizes/italics_font_size = 36
theme_override_font_sizes/mono_font_size = 36
theme_override_styles/normal = SubResource("StyleBoxFlat_vw1eu")
bbcode_enabled = true
text = "                 [b] [u]How To Play[/u][/b]                 
use the arrow keys ‚¨Ö‚û° to
move left and right
respectively, up arrow key
‚¨Ü to jump, 'P' to punch and
'K' to kick

[u]OTHER FEATURES[/u]
you can pause game using
the spacebar or onscreen 
button.
you can do a double jump 
by pressing the up arrow while in
air

"
fit_content = true
scroll_following_visible_characters = true
autowrap_mode = 0
autowrap_trim_flags = 0
horizontal_alignment = 1

[node name="settings_tab" type="Node2D" parent="."]
visible = false
position = Vector2(1, -3)

[node name="exit_settings" type="Button" parent="settings_tab"]
offset_left = 859.0459
offset_top = 144.98325
offset_right = 929.0459
offset_bottom = 215.98325
theme_override_font_sizes/font_size = 45
icon = ExtResource("6_flo1l")
expand_icon = true

[node name="ScrollContainer" type="ScrollContainer" parent="settings_tab"]
texture_filter = 1
offset_left = 263.0
offset_top = 214.0
offset_right = 926.0
offset_bottom = 622.0
theme_override_styles/panel = SubResource("StyleBoxFlat_goorp")
horizontal_scroll_mode = 0

[node name="Label" type="Label" parent="settings_tab/ScrollContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 35
theme_override_styles/normal = SubResource("StyleBoxFlat_vw1eu")
text = "Player Name

Audio

Music

                                                                 "

[node name="audio" type="CheckButton" parent="settings_tab"]
texture_filter = 1
offset_left = 684.00006
offset_top = 342.00003
offset_right = 758.00006
offset_bottom = 372.80002
scale = Vector2(2.5, 2.5)
icon = ExtResource("7_wjdee")
expand_icon = true

[node name="SFX" type="CheckButton" parent="settings_tab"]
texture_filter = 1
offset_left = 685.00006
offset_top = 428.0
offset_right = 759.00006
offset_bottom = 461.19998
scale = Vector2(2.5, 2.5)
icon = ExtResource("8_yhjr5")
expand_icon = true

[node name="p_name" type="TextEdit" parent="settings_tab"]
offset_left = 609.0
offset_top = 261.0
offset_right = 850.0
offset_bottom = 303.0
placeholder_text = "Player"
backspace_deletes_composite_character_enabled = true
wrap_mode = 1

[node name="Button" type="Button" parent="."]
texture_filter = 1
offset_left = 999.0
offset_top = 7.0
offset_right = 1149.0
offset_bottom = 68.0
theme_override_colors/font_color = Color(18.53297, 18.180967, 18.216167, 1)
theme_override_font_sizes/font_size = 35
theme_override_styles/normal = SubResource("StyleBoxTexture_goorp")
text = "Storeüè§"
flat = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_mnr3g")
parameters/looping = true

[connection signal="pressed" from="VBoxContainer/play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="VBoxContainer/help" to="." method="_on_help_pressed"]
[connection signal="pressed" from="VBoxContainer/settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="help_tab/exit_help" to="." method="_on_exit_help_pressed"]
[connection signal="pressed" from="settings_tab/exit_settings" to="." method="_on_exit_settings_pressed"]
[connection signal="text_changed" from="settings_tab/p_name" to="." method="_on_p_name_text_changed"]
